--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,14 @@
 // config
-@import "variables";
+@import "variables"; 
 
-//layout
-@import "reboot";
+//animation
+@import "animation";
 
 //mixin
-@import "mixin";
+@import "mixin"; 
 
-//button
+//common
+@import "common";
+
+//component styles 
 @import "../components/Button/style";
-
-
-//menu
-@import "../components/Menu/style";
