--- a/src/components/Button/style/index.scss
+++ b/src/components/Button/style/index.scss
@@ -6,10 +6,12 @@
     white-space: nowrap;
     -webkit-tap-highlight-color: transparent;
     border-radius: $btn-border-radius;
-    box-shadow: $btn-box-shadow;
+    box-shadow: $btn-box-shadow; 
     cursor: pointer;
     transition: .3s;  
     border: $btn-border-width solid transparent;
+    margin-right: 8px;
+    margin-bottom: 12px;
     @include btn-size($btn-padding-y, $btn-padding-x, $btn-font-size, $border-radius);
     &.disabled, 
     &[disabled]{
